--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -17,6 +17,8 @@
           </a>
           
           {% endif %}
+          <span><a href="{{ "/feed.xml" | prepend: site.baseurl }}">RSS</a></span>
+          <span class="point"> · </span>
           <span class="point"> · </span>
           <span>{{ site.description }}</span>
 
